templates/simple/src/styles.css
/* ... */
table caption {
  font-size: 1.5em;
  margin: 0.5em 0 0.75em;
}

table tr {
  border-width: 1px;
  border-style: solid;
  padding: 0.35em;
}

table th,
table td {
  padding: 0.625em;
}

table th {
  font-size: 0.85em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

@media screen and (max-width: 600px) {
  table {
    border: 0;
  }

  table caption {
    font-size: 1.3em;
  }

  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }

  table tr {
    border-bottom-width: 3px;
    display: block;
    margin-bottom: 0.625em;
  }

  table td {
    border-bottom-width: 1px;
    border-bottom-style: solid;
    display: block;
    font-size: 0.8em;
    text-align: right;
  }

  table td::before {
    /*
    * aria-label has no advantage, it won't be read inside a table
    content: attr(aria-label);
    */
    content: attr(data-label);
    float: left;
    font-weight: bold;
    text-transform: uppercase;
  }

  table td:last-child {
    border-bottom: 0;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 24px;
  margin-bottom: 16px;
  font-weight: 600;
  line-height: 1.25;
}

h1 {
  font-size: 1.75em;
  font-weight: 700;
}

h2 {
  font-weight: 600;
  padding-bottom: 0.3em;
  font-size: 1.5em;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

h3 {
  font-weight: 600;
  font-size: 1.25em;
}

h4 {
  font-weight: 600;
  font-size: 1em;
}

h5 {
  font-weight: 600;
  font-size: 0.875em;
}

h6 {
  font-weight: 600;
  font-size: 0.85em;
}

p {
  margin-top: 0;
  margin-bottom: 10px;
}

main {
  padding: 20px 40px;
  overflow-y: auto;
}

article {
  max-width: 980px;
  margin: 0 auto;
  grid-area: article;
  line-height: 1.5;
}

header {
  display: flex;
  grid-area: header;
  align-items: center;
  z-index: 1001;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 4px;
}

.branding {
  text-decoration: none;
  display: flex;
  padding: 20px;
  align-items: center;
}

.branding .logo {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
  height: 50px;
}

.branding .logo img {
  width: 100%;
  height: auto;
}

.branding .name {
  font-size: 20px;
  font-weight: bold;
}

.alert > p {
  margin-bottom: 0;
}

.alert {
  letter-spacing: 0;
  box-sizing: border-box;
  font-size: inherit;
  line-height: 1.6rem;
  word-spacing: 0.05rem;
  border-bottom-right-radius: 2px;
  border-top-right-radius: 2px;
  padding: 8px 12px 8px 20px;
  margin-bottom: 16px;
  position: relative;
  border-left-width: 4px;
  border-left-style: solid;
}

.alert::before {
  border-radius: 100%;
  font-size: 14px;
  font-weight: 700;
  left: -12px;
  line-height: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  height: 20px;
  width: 20px;
  text-align: center;
  top: 12px;
}

.alert.success {
  border-left-style: solid;
  border-left-width: 4px;
}

.alert.success::before {
  content: "✓";
}

.alert.info {
  border-left-style: solid;
  border-left-width: 4px;
}

.alert.info::before {
  content: "i";
}

.alert.warn {
  border-left-style: solid;
  border-left-width: 4px;
}

.alert.warn::before {
  content: "!";
}

.alert.error {
  border-left-style: solid;
  border-left-width: 4px;
}

.alert.error::before {
  content: "x";
}

.jump-container {
  display: flex;
  max-width: 980px;
  margin: 0 auto;
  margin-top: 40px;
}

.flex {
  flex: 1;
}

a.jump {
  text-decoration: none;
  flex: 1;
  text-align: center;
  border-style: solid;
  border-width: 1px;
  padding: 8px 16px;
  width: 100%;
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 2px;
}

a.jump.next {
  margin-left: 8px;
}

a.jump.next::after {
  content: " →";
}

a.jump.previous {
  margin-right: 8px;
}

a.jump.previous::before {
  content: "← ";
}

@media screen and (max-width: 800px) {
  .jump-container {
    flex-direction: column;
  }

  a.jump.next {
    margin-left: 0px;
    margin-top: 16px;
  }

  a.jump.previous {
    margin-right: 0px;
    margin-top: 16px;
  }
}

.meta {
  display: flex;
  flex-wrap: wrap;
  border-top-style: solid;
  border-top-width: 1px;
  margin: 0 auto;
  margin-top: 30px;
  padding-top: 30px;
  max-width: 980px;
}

.meta .edit-github {
  text-decoration: none;
  flex: 1;
}

.meta .copyright {
  flex: 2;
}

.section ul,
nav > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav > ul {
  margin-bottom: 16px;
}

nav li + li {
  margin-top: 0px;
}

.section {
  display: flex;
  flex-direction: column;
  margin-bottom: 16px;
}

.section > .name {
  text-decoration: none;
  padding: 10px;
  border-width: 1px;
  border-style: solid;
  width: 100%;
  user-select: none;
}

.section .section {
  margin-left: 16px;
  margin-bottom: 0px;
}

.page {
  display: block;
  padding: 10px;
  text-decoration: none;
}

.section > .links {
  border-left-width: 1px;
  border-left-style: solid;
  padding-top: 6px;
}

.drawer-container {
  --transition-speed: 0.3s;
}

.drawer {
  width: 300px;
  height: 100%;
  overflow: auto;
  position: fixed;
  display: flex;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
  transition: transform var(--transition-speed) ease;
  z-index: 1000;
}

.drawer.left {
  top: 80px;
  left: 0;
  transform: translateX(-105%);
}

.drawer.right {
  top: 80px;
  right: 0;
  transform: translateX(100%);
}

.drawer-container.in.open .left,
.drawer-container.in.open .right {
  transform: translateX(0);
}

.backdrop {
  visibility: hidden;
  opacity: 0;
  background: rgba(0, 0, 0, 0.5);
  transition: opacity var(--transition-speed) ease,
    visibility var(--transition-speed) ease;
  width: 100%;
  height: 100%;
  top: 80px;
  left: 0;
  position: fixed;
  pointer-events: none;
  z-index: 0;
}

.drawer-container.in.open .backdrop {
  visibility: visible;
  opacity: 1;
  pointer-events: auto;
  z-index: 999;
}
/* ... */

